--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               Join the Moove community and begin your journey towards owning
               your vehicle and starting your business today.
             </p>
-            <a href="">Choose your vehicle</a>
+            <a href="" class="btn">Choose your vehicle</a>
           </div>
           <div class="second-text">
             <div class="bottom-text">
@@ -110,7 +110,29 @@
       </section>
       <!-- custommers love -->
       <section class="cus-love">
-
+        <div class="contain cus-love-grid">
+          <div class="cus-love-text">
+            <h1>Why our customers <span>love Moove</span></h1>
+            <p>
+              Optimism is the faith that leads to achievement. Nothing can be done without hope and confidence. I joined Moove at a time I was looking for a flexible income option that will allow freedom and independence. I am forever grateful for the opportunity Moove has given a female driver like me
+            </p>
+            <p class="name">Ebiekiemiete Wali</p>
+            <a href="" class="btn">join us</a>
+          </div>       
+      </section>
+      <section class="vehicles">
+        <div class="contain vehicles-grid">
+          <div class="vehicles-text">
+            <h1>Choose your <span> vehicle</span></h1>
+            <p>
+              Find out more information about the vehicles that are available to you and explore the various ways in which you can get started with Moove.
+            </p>
+            <a href="" class="btn black-bg">find out more</a>
+          </div>
+          <div class="vehicles-img">
+            <img src="./assets/images/vehicles_ceef58a3f5.png" alt="">
+          </div>
+        </div>
       </section>
     </main>
   </body>
